<resources>
    <string name="app_name">爱家乡</string>
    <string name="love_home">爱家乡</string>
    <string name="publish">发布</string>
    <string name="my">我的</string>
    <string name="negative">取消</string>
    <string name="poistive">确定</string>
    <string name="input_name">请输入商户名称</string>
    <string name="aojiang">鳌江</string>
    <string name="search_good">查找商户</string>
    <string name="fellow_recommended">老乡推荐</string>
    <string name="price">￥</string>
    <string name="one_price">120/人</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="user_name_hint">手机号/用户名</string>
    <string name="password_hint">密码</string>
    <string name="user_register">用户注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="use_three_login">第三方登录</string>
    <string name="weixin_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <!--我的-->
    <string name="loginout">退出登录</string>
    <string name="cleancache">清理缓存</string>
    <string name="updatepassword">修改密码</string>
    <string name="sharesoft">分享软件</string>
    <string name="aboutlovehome">关于“爱家乡”</string>
    <string name="PlatformStatement">平台申明</string>
    <string name="MyMessage">我的消息</string>
    <string name="MyCollection">我的收藏</string>
    <string name="MyDraft">我的草稿</string>
    <string name="MyRelease">我的发布</string>
    <string name="allshop">全部商户</string>
    <string name="all_type">全部分类</string>
    <string name="phonenumber">手机号码:</string>
    <string name="getcode">获取验证码</string>
    <string name="phone_number">11位手机号码</string>
    <string name="phone_code">手机验证码:</string>
    <string name="code">请输入验证码</string>
    <string name="getpassword">获取登录密码</string>
    <string name="update">确认修改</string>
    <string name="ensurepassword">再次输入密码</string>
    <string name="confirm_password">确认密码：</string>
    <string name="forgetpassword">忘记密码</string>
    <!--详情-->
    <string name="phone">电话</string>
    <string name="jubao">举报</string>
    <string name="phone_register">手机号码:</string>
    <string name="phone_11_register">11位手机号码</string>
    <string name="getcode_register">获取验证码</string>
    <string name="phonecode_register">手机验证码:</string>
    <string name="edit_code_register">请输入验证码</string>
    <string name="password_register">密码:</string>
    <string name="password_6_register">6位密码</string>
    <string name="sure_password_register">确认密码:</string>
    <string name="again_password_register">再次输入密码</string>
    <string name="agreement_register">我已阅读并且同意</string>
    <string name="register">注册</string>
    <string name="name_update">用户名：</string>
    <string name="newname_update">请输入要修改的用户名</string>
    <string name="sure_update">确认修改</string>
    <string name="oldpassword_update">旧密码：</string>
    <string name="edit_oldpassword_update">请输入旧密码</string>
    <string name="surepassword_update">确认密码：</string>
    <string name="passwod_6_update">6位密码</string>
    <string name="delicacy">美食</string>
    <!--我的资料-->
    <string name="update_photo_userinfo">点击修改头像</string>
    <string name="name_userinfo">用户名称</string>
    <string name="phone_userinfo">联系方式</string>
    <string name="address_userinfo">联系地址</string>
    <!--添加发布-->
    <string name="shopstore_addpublish">商家名称:</string>
    <string name="businesstime_addpublish">营业时间:</string>
    <string name="starttime_addpublish">开始时间</string>
    <string name="to_addpublish">至</string>
    <string name="endtime_addpublish">结束时间</string>
    <string name="consume_addpublish1">人均消费:</string>
    <string name="consume_addpublish2">人均消费</string>
    <string name="yuan_addpublish">元</string>
    <string name="count_unit_addpublish">计量单位:</string>
    <string name="editcount_unit_addpublish">请填写计量单位（例如人、小时等）</string>
    <string name="address_addpublish">地址:</string>
    <string name="editaddress_addpublish">请填写地址</string>
    <string name="contacts_addpublish">联系人:</string>
    <string name="editcontacts_addpublish">请填写联系人</string>
    <string name="phone_addpublish">电话:</string>
    <string name="editphone_addpublish">请填写正确的联系方式（外地带“区号”）</string>
    <string name="support_addpublish">支持外卖服务</string>
    <string name="takeout_tome_addpublish">外卖时间:</string>
    <string name="takeout_area_addpublish">外卖范围:</string>
    <string name="takeout_money_addpublish">外卖收费:</string>
    <string name="yuan_ci_addpublish">元/次</string>
    <string name="editdetails_addpublish">填写详情</string>
    <string name="savedraft_addpublish">保存草稿</string>
    <string name="publish_addpublish">立即发布</string>
    <string name="fuhao_mycollection">¥</string>
    <string name="unit_mycollection">/桌起</string>
    <string name="share_mycollection">分享</string>
    <string name="delete_mycollection">删除</string>
    <string name="publish_mymessage">您发布的[</string>
    <string name="publish2_mymessage">]未审核...</string>
    <string name="passnot_mymessage">审核不通过</string>
    <string name="agreement_register2">《服务条款》</string>
    <string name="confirmjubao">确认举报</string>

</resources>
