<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/person_background"
    android:orientation="vertical">

    <include layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="20.0dip"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="8.0"
            android:gravity="center_vertical"
            android:text="@string/phonenumber"
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3.0"
            android:gravity="center_vertical">



            <LinearLayout
                android:id="@+id/layout_forget_send_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_forget_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_small_green"
                    android:text="@string/getcode"
                    android:textColor="@android:color/white"
                    android:textSize="16.0dip" />
            </LinearLayout>
            <EditText
                android:id="@+id/edt_forget_phone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@id/layout_forget_send_code"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:paddingLeft="10.0dip"
                android:textSize="16.0dip" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="1.0dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="8.0"
            android:gravity="center_vertical"
            android:text="@string/phone_code"
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/edt_forget_phone_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3.0"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/code"
            android:inputType="number"
            android:paddingLeft="10.0dip"
            android:textSize="16.0dip" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_forget_password_get_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/btn_large_green"
        android:text="@string/getpassword"
        android:textColor="@android:color/white"
        android:textSize="16.0dip" />
</LinearLayout>