<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.lovehometown.activity.LoginActivity">
    <include android:id="@+id/titlebar_login" layout="@layout/head"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/login_input_shape"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@drawable/user"/>
            <EditText
                android:id="@+id/userName"
                android:textColorHint="@color/hintcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:hint="@string/user_name_hint"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:background="@color/color_divder_login"
            android:layout_height="0.5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="60dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:src="@drawable/password"
                />
            <EditText
                android:id="@+id/password"
                android:textColorHint="@color/hintcolor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:hint="@string/password_hint"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="login"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_shape"
        android:textSize="20sp"
        android:text="@string/login"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/color_text_login"
            android:textSize="20sp"
            android:text="@string/user_register"/>
        <TextView
            android:id="@+id/forwordPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/color_text_login"
            android:textSize="20sp"
            android:text="@string/forget_password"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color_divder_login"
            android:layout_gravity="center_vertical"
            android:layout_height="0.5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:text="@string/use_three_login"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/color_divder_login"
            android:layout_gravity="center_vertical"
            android:layout_height="0.5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/weixinLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weixin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_lgin_three"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/weixin_login"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/qqLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_text_lgin_three"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/qq_login"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
