<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/person_background"
    android:orientation="vertical">

    <include layout="@layout/head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="10.0dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip"
        android:visibility="gone">

        <TextView
            android:layout_width="100.0dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="用户名："
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/edt_update_password_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:textSize="16.0dip" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="1.0dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:id="@+id/edt_update_old_password_tips"
            android:layout_width="100.0dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="旧密码："
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <Button
            android:id="@+id/btn_update_forget_password"
            android:layout_width="100.0dip"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/theme_color"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/edt_update_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_update_forget_password"
            android:layout_toRightOf="@id/edt_update_old_password_tips"
            android:background="@android:color/transparent"
            android:hint="请输入旧密码"
            android:inputType="textPassword"
            android:textSize="16.0dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="1.0dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:layout_width="100.0dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="确认密码："
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/edt_update_ensure_password1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:hint="6位密码"
            android:inputType="textPassword"
            android:textSize="16.0dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50.0dip"
        android:layout_marginTop="1.0dip"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <TextView
            android:layout_width="100.0dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/confirm_password"
            android:textColor="@android:color/black"
            android:textSize="16.0dip" />

        <EditText
            android:id="@+id/edt_update_ensure_password2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/ensurepassword"
            android:inputType="textPassword"
            android:textSize="16.0dip" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_update_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/btn_large_green"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="16.0dip" />
</LinearLayout>