<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <include layout="@layout/head"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:background="@color/theme_color"
            android:layout_marginTop="1dip">
            <ImageView
                android:id="@+id/userinfo_img"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:src="@drawable/mrtx_pic"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_photo_userinfo"
                android:layout_toRightOf="@id/userinfo_img"
                android:layout_marginTop="45dip"
                android:layout_marginLeft="10dip"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/img_my_fragment_login_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/userNameInfo"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_userinfo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/go2_user_info"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/img_my_fragment_title_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                />
            <TextView
                android:id="@+id/name_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="haha"
                android:layout_toLeftOf="@id/go2_user_info"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/personal_line_color"/>
        <RelativeLayout
            android:id="@+id/userphoneInfo"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_userinfo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:textSize="16sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/go3_user_info"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/img_my_fragment_title_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                />
            <TextView
                android:id="@+id/phone_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11111111111"
                android:layout_toLeftOf="@id/go3_user_info"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/personal_line_color"/>
        <RelativeLayout
            android:id="@+id/userAddressInfo"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_userinfo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dip"
                android:textSize="16sp"
                android:textColor="@color/black"
                />
            <ImageView
                android:id="@+id/go4_user_info"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/img_my_fragment_title_right"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dip"
                />
            <TextView
                android:id="@+id/address_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="双清区"
                android:layout_toLeftOf="@id/go4_user_info"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                />
        </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_weight="1"
        android:background="@color/personal_line_color"
        />
</LinearLayout>
